[project]
name = "pro-experience-agent"
version = "0.1.0"
description = "Pro Experience Agent hosted in the FractalForge runtime."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-opentelemetry-distro==0.15.0",
    "bedrock-agentcore==1.2.1",
    "strands-agents==1.35.0",
    "fractal-agents-core",
]

[tool.uv.sources]
fractal-agents-core = { path = "../fractal-agents-core" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "infrastructure",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py313"
preview = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8-naming
    "C90", # mccabe complexity
    "T",  # isort
    "PL", # pylint
    "Q"   # flake8-quotes
]
ignore = [
    "E303",  # pycodestyle errors: too-many-blank-lines
    "PLR6301",  # pylint: no-self-use
    "Q003"  # flake8-quotes avoidable-escaped-quote
]

# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in docstrings.
#
# This only has an effect when the `docstring-code-format` setting is enabled.
docstring-code-line-length = "dynamic"



