[project]
name = "pro-experience-agent-cdk"
version = "0.1.0"
description = "AWS CDK infrastructure for deploying Fractal Pro Experience Agent to AgentCore Runtime."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib==2.243.0",
    "pydantic==2.12.5"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Increase max line length - fp large monitors
line-length = 120

# Same as Black
indent-width = 4

target-version = "py313"

# Enable preview features
preview = true

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "N",       # pep8-naming
    "C90",     # mccabe complexity
    "I",       # isort
    "PL",      # pylint
    "Q"        # flake8-quotes
]
ignore = [
    "E303",    # pycodestyle errors: too-many-blank-lines
    "PLR6301", # pylint: no-self-use
    "Q003",    # flake8-quotes avoidable-escaped-quote
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
